--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,30 +1,24 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
-
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm i
-    - run: npm run build --if-present
+name: vertical-tabs
+　　　　　　on:
+　　　　　　　push:
+　　　　　　　　branches:
+　　　　　　　　　- master
+　　　　　　jobs:
+　　　　　　　build-and-deploy:
+　　　　　　　　runs-on: ubuntu-latest # 我们选择使用最新的ubuntu系统
+　　　　　　　　steps:
+　　　　　　　　- name: Checkout
+　　　　　　　　　uses: actions/checkout@master # 将代码拷贝到虚机中
+　　　　　　　　　with:
+　　　　　　　　　　persist-credentials: false
+　　　　　　　　- name: Install and Build
+　　　　　　　　　run: |
+　　　　　　　　　　npm install
+　　　　　　　　　　npm run-script build
+　　　　　　　　- name: Deploy
+　　　　　　　　　uses: JamesIves/github-pages-deploy-action@releases/v3
+　　　　　　　　　with:
+　　　　　　　　　　ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # 使用刚新建的secret
+　　　　　　　　　　BRANCH: gh-pages # 存放产物的分支名称
+　　　　　　　　　　FOLDER: dist # 存放build后产物的目录
+　　　　　　　　　　BUILD_SCRIPT: npm install && npm run build # 执行的命令
